now result list is sorted